[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcheck"
version = "0.1.0"
description = "Pytest-style behavioral regression testing for AI agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
agentcheck = "agentcheck.cli:main"

[project.entry-points.pytest11]
agentcheck = "agentcheck.pytest_plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agentcheck*"]

[tool.pytest.ini_options]
cache_dir = ".agentcheck/pytest_cache"
